# AI-TEST-PLAN-GENERATOR-V2

./: .dockerignore  .env.example  .gitignore  .readthedocs.yaml  DEVELOPMENT_PLAN.md  DOCUMENTATION_APPLICATION_FR.md  Dockerfile  INTEGRATION.md  Inflectra-Test-Plan-Template-Excel.xlsx  MODIFICATIONS_LOG.md  Makefile  NEXT_PRODUCT_UPGRADES_ROADMAP.md  PROJECT_AUDIT_REPORT_2026-06-18.md  README.md  ROADMAP.md  SEMESTER_PROJECT_PRESENTATION.md  TASKS.md  architecture_diagrams.html  docker-compose.yml  mockup.html  presentation.md  pyproject.toml  test_req_1.docx
.github/workflows/: ci.yml  release.yml
ai_testplan_generator/: __init__.py
docs/: requirements.txt
docs/general-knowledge-base/: 01_Test_Process_and_Test_Plan_Guide.md  02_Requirements_Writing_and_Review_Guide.md  03_Cybersecurity_Testing_Checklist.md  04_Industrial_IoT_Testing_Patterns.md  05_Traceability_Matrix_and_Coverage_Guide.md  README.md
docs/live-demo-project-docs/: 01_LIVEDEMO_EdgeMonitor_requirements.md  02_LIVEDEMO_EdgeMonitor_architecture.md  03_LIVEDEMO_EdgeMonitor_incidents.md  README.md
docs/sample-project-docs/: README.md
docs/source/: conf.py  index.md
docs/source/development/: documentation.md  repository.md  roadmap.md  testing.md
docs/source/operations/: configuration.md  deployment.md  docker.md  installation.md  troubleshooting.md
docs/source/product/: demo-script.md  features.md  known-limits.md  overview.md
docs/source/reference/: python-api.md
docs/source/technical/: ai-brain.md  api.md  architecture.md  backend.md  data-model.md  frontend.md  observability.md  security.md
docs/source/user-guide/: chat.md  documents.md  exports.md  generate-plan.md  getting-started.md  knowledge-base.md  projects.md
docs/test-knowledge-base/: 01_SF-EDGE-PRD_product_requirements.md  02_SF-EDGE_architecture_and_api.md  03_SF-EDGE_security_and_compliance.md  04_SF-EDGE_validation_strategy.md  05_SF-EDGE_incident_and_change_log.md
evals/: README.md  __init__.py  baseline.json  cli.py  last-report.md  loader.py  report.py  runner.py  scoring.py
evals/benchmarks/synthetic_aerospace/: expected.yaml  prefab_requirements.json  spec.md
examples/: run_autonomous.py  run_interactive.py
frontend/: .env.example  .gitignore  Dockerfile  app.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  styles.css  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/e2e/: phase13-happy-path.spec.ts
frontend/src/: main.tsx
frontend/src/app/: layout.tsx  router.tsx
frontend/src/lib/: chat-sessions.ts  utils.test.ts  utils.ts
frontend/src/test/: setup.ts
ops/compose/: env.example
ops/grafana/dashboards/: api.json  brain.json
ops/helm/aitpg/: Chart.yaml  README.md  values.yaml
ops/prometheus/: prometheus.yml
output/pdf/: DOCUMENTATION_APPLICATION_FR.tex
outputs/: AI_Test_Plan_Generator_presentation_FR.pptx
scripts/: create_admin.py  dump_openapi.py  seed_demo_data.py
src/ai_testplan_generator/: __init__.py  config.py
src/ai_testplan_generator/agents/: __init__.py  base.py  copilot.py  defect_aggregator.py  state.py  (+9 more)
tests/: conftest.py  test_api.py  test_memory.py  test_models.py
tests/agents/: test_budget_guard.py  test_copilot_context.py  test_generator_trust.py  test_industry_prompts.py  test_planner_scope.py
tests/api/: conftest.py  test_app.py  test_audit.py  test_auth.py  test_chat.py  test_chat_mutations.py  test_coverage_regeneration.py  test_documents.py  test_job_checkpoints.py  test_jobs.py  test_planning.py  test_plans.py  test_projects.py  test_rbac.py  test_traceability.py
tests/domain/: test_artifacts.py  test_chat_actions.py  test_jobs.py  test_project_industry.py  test_users.py
tests/e2e/: test_acceptance_restart_flow.py
tests/fixtures/: phase7_acceptance_spec.md
tests/graphs/: test_autonomous_feedback.py  test_interactive_scope.py
tests/ingestion/: test_prompt_injection_defense.py
tests/llm/: test_litellm_gateway.py  test_prompt_safety.py
tests/memory/: test_artifact_persistence.py  test_neo4j_graph.py  test_qdrant_store.py  test_sqlite_episodic.py
tests/quality/: test_static_checks.py
tests/storage/: test_encrypted.py  test_local_fs.py
tests/telemetry/: test_cost.py  test_metrics.py  test_otel.py
(+178 files in other folders)
